force-app/main/default/objects/Risk_Assessment_Definition__c/fields/Initial_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Initial Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>