force-app/main/default/objects/Risk_Assessment_Definition__c/fields/Total_Questions__c.field-meta.xml
<CustomField>
    <fullName>Total_Questions__c</fullName>
    <label>Total Questions</label>
    <summarizedField>Risk_Assessment_Section__c.Total_Questions__c</summarizedField>
    <summaryForeignKey>Risk_Assessment_Section__c.Risk_Assessment_Definition__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>